--- a/templates/inventario/view.html
+++ b/templates/inventario/view.html
@@ -49,8 +49,8 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="{% url 'inventario:insumo' %}">Insumos</a></li>
-                    <li><a class="dropdown-item" href={% url 'inventario:entrada_insumo' %}>Entrada de insumos</a></li>
-                    <li><a class="dropdown-item" href="{% url 'inventario:salida_insumo' %}">Salida de insumos</a></li>
+                    <li><a class="dropdown-item" href={% url 'inventario:entrada_insumo' %}>Compra</a></li>
+                    <li><a class="dropdown-item" href="{% url 'inventario:salida_insumo' %}">Venta</a></li>
 
                 </ul>
             </div>
