--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
                             >
                                 <div class="profile-info">
                                     <div class="info">
-                                        <h6>John Doe</h6>
+                                        <h6>{{ user.email }}</h6>
                                         <div class="image">
                                             <img
                                                     src="{% static 'assets/images/profile/profile-image.png' %}"
