mantenimiendo de empresa

--- a/templates/administracion/view.html
+++ b/templates/administracion/view.html
@@ -53,6 +53,31 @@
                             </ul>
                         </div>
                     </div>
+
+                </div>
+            </div>
+
+
+            <div class="col-md-3">
+                <div class="item">
+
+                    <!-- Card -->
+                    <div class="card  mb-4 card-hover">
+                        <a href="pages/course-single.html" class="card-img-top"><img
+                                src='#' alt="" class="card-img-top rounded-top-md"></a>
+                        <!-- Card Body -->
+                        <div class="card-body">
+                            <h4 class="mb-2 text-truncate-line-2 "><a href="{% url 'administracion:view_empresa' %}"
+                                                                      class="text-inherit">
+                                Empresas</a></h4>
+                            <!-- List -->
+                            <ul class="mb-3 list-inline">
+                                <li class="list-inline-item">
+                                    empresa
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
 
