diseño de los formularios

--- a/templates/administracion/empresa/view.html
+++ b/templates/administracion/empresa/view.html
@@ -55,7 +55,7 @@
                     <p class="text-sm mb-20">
                         Mi empresa
                     </p>
-                    <div class="table-wrapper table-responsive">
+                    <div class="table-wrapper ">
                         <hr>
                         {% if existe_mi_empresa %}
                             <form action="{% url 'administracion:edit_empresa' datos_empresa.pk %}" method="POST">
