--- a/templates/inventario/view.html
+++ b/templates/inventario/view.html
@@ -148,9 +148,9 @@
                                 </td>
                                 <td>
                                     <div class="action justify-content-end">
-                                        <button class="edit">
+                                        <a href="#" class="edit">
                                             <i class="lni lni-printer"></i>
-                                        </button>
+                                        </a>
                                         <button
                                                 class="more-btn ml-10 dropdown-toggle"
                                                 id="moreAction1"
