adicionando reportes pdf

--- a/templates/inventario/insumo/insumo_view.html
+++ b/templates/inventario/insumo/insumo_view.html
@@ -69,8 +69,8 @@
                         Reportes
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="{% url 'inventario:reporte_insumos_xlsx' %}">Reporte de insumos</a></li>
-
+                        <li><a class="dropdown-item" href="{% url 'inventario:reporte_insumos_xlsx' %}">Reporte Excel de insumos</a></li>
+                        <li><a class="dropdown-item" href="{% url 'inventario:reporte_insumo_pdf' %}">Reporte PDF de insumos</a></li>
                     </ul>
                 </div>
             </div>
