--- a/templates/inventario/categoria/categoria_view.html
+++ b/templates/inventario/categoria/categoria_view.html
@@ -44,7 +44,21 @@
         <!-- end row -->
     </div>
     <!-- ========== title-wrapper end ========== -->
+    <div class="row pb-3">
+        <div class="dropdown">
+            <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton1"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                Reportes
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="{% url 'inventario:reporte_categoria_xlsx' %}">Reporte de
+                    categorias</a></li>
 
+
+            </ul>
+        </div>
+
+    </div>
     <!-- ========== tables-wrapper start ========== -->
     <div class="tables-wrapper">
 
