--- a/templates/inventario/proveedor/view.html
+++ b/templates/inventario/proveedor/view.html
@@ -45,6 +45,23 @@
     </div>
     <!-- ========== title-wrapper end ========== -->
 
+
+    <div class="row pb-3">
+        <div class="dropdown">
+            <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton1"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                Reportes
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="{% url 'inventario:reporte_proveedor_xlsx' %}">Reporte de
+                    proveedores</a></li>
+
+
+            </ul>
+        </div>
+
+    </div>
+
     <!-- ========== tables-wrapper start ========== -->
     <div class="tables-wrapper">
 
@@ -136,7 +153,7 @@
 
                             {% empty %}
                                 <tr>
-                                   <td> No existen registros</td>
+                                    <td> No existen registros</td>
                                 </tr>
                             {% endfor %}
 
