--- a/templates/inventario/unidadMedida/unidad_medida_view.html
+++ b/templates/inventario/unidadMedida/unidad_medida_view.html
@@ -45,7 +45,21 @@
 
     <!-- ========== title-wrapper end ========== -->
 
+     <div class="row pb-3">
+        <div class="dropdown">
+            <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton1"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                Reportes
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="{% url 'inventario:reporte_unidad_medida_xlsx' %}">Reporte de
+                    unidad de medida</a></li>
 
+
+            </ul>
+        </div>
+
+    </div>
 
     <!-- ========== tables-wrapper start ========== -->
     <div class="tables-wrapper">
