--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,3 +1,18 @@
+{% extends 'registration/base_registration.html' %}
+{% block title %}Contraseña cambiada{% endblock %}
+{% block content %}
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col"></div>
 
-  <h1>The password has been changed!</h1>
-  <p><a href="{% url 'login' %}">log in again?</a></p>
+            <div class="col-md-5 mt-5">
+                <div class="align-items-center mb-30">
+                    <h1>¡La contraseña ha sido cambiada!</h1>
+                    <p><a href="{% url 'login' %}">¿ingresar de nuevo?</a></p>
+                </div>
+
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
