--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,2 +1,24 @@
+{% extends 'registration/base_registration.html' %}
+{% block title %}Envio{% endblock %}
 
-  <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
+{% block content %}
+
+    <div class="container mt-5">
+
+        <div class="row mt-5">
+            <div class="col-lg-4 offset-lg-4 mt-5">
+                <div class="title  align-items-center mb-30">
+                    <p>
+                        Le hemos enviado instrucciones por correo electrónico para establecer su contraseña. Si no han llegado en unos minutos, revisa tu carpeta de correo no deseado.
+                    </p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+{% endblock %}
+
+
