--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="es">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link
-            rel="shortcut icon"
-            href={% static 'assets/images/favicon.svg' %}
-                    type="image/x-icon"
-    />
-    <title>PlainAdmin Demo | Bootstrap 5 Admin Template</title>
 
-    <!-- ========== All CSS files linkup ========= -->
-    <link rel="stylesheet" href={% static 'assets/css/bootstrap.min.css' %}/>
-    <link rel="stylesheet" href={% static 'assets/css/lineicons.css' %}/>
-    <link rel="stylesheet" href={% static 'assets/css/materialdesignicons.min.css' %}/>
-    <link rel="stylesheet" href={% static 'assets/css/fullcalendar.css' %}/>
-    <link rel="stylesheet" href={% static 'assets/css/fullcalendar.css' %}/>
-    <link rel="stylesheet" href={% static 'assets/css/main.css' %}/>
-</head>
-<body>
+{% extends 'registration/base_registration.html' %}
+{% block title %}Login{% endblock %}
 
-
-<!-- ======== main-wrapper start =========== -->
-<main class="container-fluid">
--
+{% block content%}
 <!-- ========== signin-section end ========== -->
 <div class="vh-100 d-flex justify-content-center align-items-center">
     <div class="container">
@@ -109,21 +86,4 @@
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
-
-</main>
-<!-- ======== main-wrapper end =========== -->
-
-
-<!-- ========= All Javascript files linkup ======== -->
-<script src= {% static 'assets/js/bootstrap.bundle.min.js' %}></script>
-<script src= {% static 'assets/js/Chart.min.js' %}></script>
-<script src= {% static 'assets/js/dynamic-pie-chart.js' %}></script>
-<script src= {% static 'assets/js/moment.min.js' %}></script>
-<script src= {% static 'assets/js/fullcalendar.js' %}></script>
-<script src= {% static 'assets/js/jvectormap.min.js' %}></script>
-<script src= {% static 'assets/js/world-merc.js' %}></script>
-<script src= {% static 'assets/js/polyfill.js' %}></script>
-<script src= {% static 'assets/js/main.js' %}></script>
-
-</body>
-</html>
+{% endblock %}
