--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,27 +1,70 @@
+{% extends 'registration/base_registration.html' %}
+{% block title %}Nueva contraseña{% endblock %}
 
-    {% if validlink %}
-        <p>Please enter (and confirm) your new password.</p>
-        <form action="" method="post">
-        {% csrf_token %}
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Change my password"></td>
-                </tr>
-            </table>
-        </form>
-    {% else %}
-        <h1>Password reset failed</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
-    {% endif %}
+{% block content %}
+
+    <div class="container mt-5">
+
+        <div class="row mt-5">
+            <div class="col-lg-12 mt-5">
+                <div class="title  align-items-center mb-30">
+                    {% if validlink %}
+                        <h5>Por favor ingrese (y confirme) su nueva contraseña.</h5>
+                        <form action="" method="post">
+                            {% csrf_token %}
+
+                            <fieldset id="id_{{ form.new_password1.name }}" class="input-style-1">
+
+                                {{ form.new_password1.label_tag }}
+                                {{ form.new_password1 }}
+                                {% if form.new_password1.help_text %}
+                                    <small id="help"
+                                           class="form-text text-muted">{{ form.new_password1.help_text|safe }}</small>
+                                {% endif %}
+                                {% for error in form.new_password1.errors %}
+                                    <div class="error-message text-danger">
+                                        {{ error }}
+                                    </div>
+                                {% endfor %}
+
+                            </fieldset>
+
+
+                            <fieldset id="id_{{ form.new_password2.name }}" class="input-style-1">
+
+                                {{ form.new_password2.label_tag }}
+                                {{ form.new_password2 }}
+                                {% if form.new_password2.help_text %}
+                                    <small id="help"
+                                           class="form-text text-muted">{{ form.new_password2.help_text|safe }}</small>
+                                {% endif %}
+                                {% for error in form.new_password2.errors %}
+                                    <div class="error-message text-danger">
+                                        {{ error }}
+                                    </div>
+                                {% endfor %}
+
+                            </fieldset>
+
+                            <fieldset class="form-group">
+                                <input type="submit" class="btn btn-primary" value="cambiar mi contraseña">
+                            </fieldset>
+                        </form>
+                    {% else %}
+                        <h1>Error al restablecer la contraseña</h1>
+                        <p>El enlace de restablecimiento de contraseña no era válido, posiblemente porque ya se usó.
+                            Solicite una nueva
+                            contraseña
+                            reiniciar.</p>
+                    {% endif %}
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+{% endblock %}
+
 
