--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,11 +1,35 @@
-
-
-
-  <form action="" method="post">
-  {% csrf_token %}
-  {% if form.email.errors %}
-    {{ form.email.errors }}
-  {% endif %}
-      <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password">
-  </form>
+{% extends 'registration/base_registration.html' %}
+{% block title %}Restablecer contraseña{% endblock %}
+{% block content %}
+    <div class="container d-flex flex-column">
+        <div class="row align-items-center justify-content-center
+          min-vh-100">
+            <div class="col-12 col-md-8 col-lg-4">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <div class="mb-4">
+                            <h5>¿Has olvidado tu contraseña?</h5>
+                            <p class="mb-2">Ingrese su ID de correo electrónico registrada para restablecer la contraseña
+                            </p>
+                        </div>
+                        <form method="POST">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" id="id_email" class="form-control" name="email"
+                                       placeholder="Introduce tu correo electrónico"
+                                       required="">
+                            </div>
+                            <div class="mb-3 d-grid">
+                                <button type="submit" class="btn btn-primary">
+                                    Restablecer la contraseña
+                                </button>
+                            </div>
+                            <span>Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar sesión</a></span>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
